Bug 143039 - FILESAVE DOCX Change tracked shape with textbox doubles
Summary: FILESAVE DOCX Change tracked shape with textbox doubles
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:7.4.0 target:7.3.1
Keywords: bibisected, bisected, regression
: 144402 (view as bug list)
Depends on:
Blocks: DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2021-06-24 08:39 UTC by NISZ LibreOffice Team
Modified: 2022-02-10 15:38 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer with two change tracked shapes (15.02 KB, application/vnd.oasis.opendocument.text)
2021-06-24 08:39 UTC, NISZ LibreOffice Team
Details
The original file saved by Writer (8.18 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2021-06-24 08:40 UTC, NISZ LibreOffice Team
Details
Example file from Writer with one change tracked shape (14.49 KB, application/vnd.oasis.opendocument.text)
2021-06-24 08:40 UTC, NISZ LibreOffice Team
Details
Screenshot of the original and exported document with two shapes side by side in Writer (51.62 KB, image/png)
2021-06-24 08:40 UTC, NISZ LibreOffice Team
Details
Screenshot of the original and exported document with one shape side by side in Writer (40.09 KB, image/png)
2021-06-24 08:41 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-06-24 08:39:49 UTC
Created attachment 173138 [details]
Example file from Writer with two change tracked shapes

Attached change tracked example file contains a paragraph with a shape and another with a shape containing a textbox.
When saved as docx the shape with the textbox gets saved twice.
When there is only one tracked change with a shape containing a textbox, the export is fine.

Steps to reproduce:
    1. Open attached file
    2. Save as docx, reload in Writer or Word

Actual results:
The lower triangle is doubled.

Expected results:
The lower triangle is not doubled.

LibreOffice details:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 6805efdecb240fad8c82a5c1756a2a0e92f12b7d
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL

Not yet in 7.1.0.

Additional Information:

Bibisected using bibisect-win64-7.2 to:
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=3eced2d52415abeac266804ab682bee022322a19 
author	Michael Stahl <michael.stahl@allotropia.de>	Wed Mar 10 11:26:07 2021 +0100
committer	Michael Stahl <michael.stahl@allotropia.de>	Wed Mar 10 16:55:05 2021 +0100

sw: DOCX export: put fly before fieldmark start into its own run

Adding CC to:  Michael Stahl
Comment 1 NISZ LibreOffice Team 2021-06-24 08:40:15 UTC
Created attachment 173139 [details]
The original file saved by Writer
Comment 2 NISZ LibreOffice Team 2021-06-24 08:40:38 UTC
Created attachment 173140 [details]
Example file from Writer with one change tracked shape
Comment 3 NISZ LibreOffice Team 2021-06-24 08:40:54 UTC
Created attachment 173141 [details]
Screenshot of the original and exported document with two shapes side by side in Writer
Comment 4 NISZ LibreOffice Team 2021-06-24 08:41:15 UTC
Created attachment 173142 [details]
Screenshot of the original and exported document with one shape side by side in Writer
Comment 5 Michael Stahl 2021-07-01 09:44:12 UTC
yep the shape is written twice into document.xml :(
Comment 6 NISZ LibreOffice Team 2021-09-15 08:03:29 UTC
*** Bug 144402 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2022-01-13 18:10:09 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f261fae4af72b1328bc3e93fc52a9a24ce0975b3

tdf#143039 tdf#143106 sw: DOCX export: don't export duplicate flys

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2022-01-15 10:30:07 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/eb88b41c15f6451e06b34e2ec0ef5ec4359c200c

tdf#143039 tdf#143106 sw: DOCX export: don't export duplicate flys

It will be available in 7.3.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Michael Stahl 2022-02-10 15:38:35 UTC
forgot to say: fixed on master