tdf#143039 tdf#143106 sw: DOCX export: don't export duplicate flys

The problem is that at the end of the paragraph a second call to
OutFlys() is made in line 2730 and that causes the duplication; for
this call the value FLY_POSTPONED must be returned, not FLY_NONE.

(regression from 3eced2d52415abeac266804ab682bee022322a19)

Also revert commit deb892628a1501527c8c41b85a65282df95b81b1 because its
test fails now as 0 comments are exported; it was apparently another
problem introduced by the above commit, and apparently this fix helps
for duplication of comments too.

Reviewed-on: https://gerrit.libreoffice.org/c/core/+/128386
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit f261fae4af72b1328bc3e93fc52a9a24ce0975b3)

Restore tdf#134951 docxexport: stop duplicating stuff in postponed text

Partially revert commit f261fae4af72b1328bc3e93fc52a9a24ce0975b3
to restore deb892628a1501527c8c41b85a65282df95b81b1 because as reported
by jluth the test case testfdo79008 that failed was apparently somewhat
misleading and the test case testTdf134951_duplicates that should test
comments erroneously failed to fail because it is doing a loadAndSave()
instead of a loadAndReload().

Reviewed-on: https://gerrit.libreoffice.org/c/core/+/128410
Tested-by: Michael Stahl <michael.stahl@allotropia.de>
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 4c4fb36222f6c624cfdea82ce266bf9d99073558)

Change-Id: Ib9706e4c24db38c15a0170ba2e8f08fba5327f98